app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	html,
	body {
		@apply box-border p-0 m-0 scroll-smooth;
	}
}

.swiper-slide,
.swiper-genres {
	display: block;
	flex-shrink: 0;
	height: 100%;
	position: relative;
	transition-property: transform;
	width: 100%;
}

.swiper-genres {
	width: max-content !important;
}

.slick-slider {
	position: relative;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
}

.slick-list {
	position: relative;
	display: block !important;
	overflow: hidden;
	width: 100%;
}

.slick-arrow {
	margin: 0 24px;
	z-index: 20;
	background-color: #10b982;
}

.slick-arrow::before {
	display: none;
}

.scrollbar::-webkit-scrollbar {
	display: none;
}

.MuiPagination-ul li button {
	font-size: 18px;
}

.MuiPagination-ul {
	display: flex;
	justify-content: center;
}

.MuiPagination-ul li button {
	font-size: 16px;
}

.MuiPagination-ul li button svg {
	width: 24px;
	height: 24px;
}

@media only screen and (max-width: 739px) {
	.MuiPagination-ul li {
		/* padding: 0 1px; */
	}
}

@media (min-width: 768px) {
	.MuiPagination-ul li button {
		font-size: 20px;
	}
	.MuiPagination-ul li button svg {
		width: 24px;
		height: 24px;
	}
	.MuiPagination-ul li {
		padding: 0 10px;
	}
}

.css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
	color: #fff;
	background-color: #10b982 !important;
}

.search-menu::-webkit-scrollbar {
	width: 4px;
	height: 8px;
}

/* Track */
.search-menu::-webkit-scrollbar-track {
	background: #f1f1f1;
}

/* Handle */
.search-menu::-webkit-scrollbar-thumb {
	background: #888;
	border-radius: 100rem;
}

/* Handle on hover */
.search-menu::-webkit-scrollbar-thumb:hover {
	background: #555;
}

.search-input:not(:focus) ~ .search-menu {
	/* visibility: hidden; */
}

.episode-scroll::-webkit-scrollbar {
	width: 4px;
	height: 8px;
}

.episode-scroll::-webkit-scrollbar-thumb {
	background: #888;
	border-radius: 100rem;
}

.progress {
	width: 100%;
	-webkit-appearance: none;
	height: 2px;
	background: #d3d3d3;
	outline: none;
	opacity: 0.7;
	/* -webkit-transition: 0.2s; */
	/* transition: all 0.2s; */
}

.progress::-webkit-slider-thumb {
	box-shadow: 1px 1px 1px #000000;
	border: 1px solid #000000;
	height: 14px;
	width: 6px;
	background: #0cf7a9;
	cursor: pointer;
	-webkit-appearance: none;
}

